fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ input:focus-visible {
 
 .cell-container {
   display: flex;
+  align-items: center;
   background: #fff;
   border-radius: 0.25rem;
   padding: 1rem;
